--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Hello World
+<html>
+<body>
+you probably wanted to go there: <a href="icesat2webview/index.html">Ice2SatWebView</a>
+</body>
+<html>
