--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-you probably wanted to go there: <a href="icesat2webview/index.html">Ice2SatWebView</a>
+you probably wanted to go there: <a href="https://d3863ripe95iiz.cloudfront.net/index.html">Ice2SatWebView</a>
 </body>
 <html>
