--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
 <body>
-you probably wanted to go there: <a href="https://d3863ripe95iiz.cloudfront.net/index.html">Ice2SatWebView</a>
+you probably wanted to go there: 
+  <a href="https://icesat2webview.s3.eu-central-1.amazonaws.com/index.html">Ice2SatWebView on S3</a>
+  <br/>
+  alternate link in case https on S3 is disabled:
+  <a href="https://d3863ripe95iiz.cloudfront.net/index.html">Ice2SatWebView on Cloudfront</a>
+  
 </body>
 <html>
