--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <html>
+<head>
+ <style>
+  body {text-align:center}
+  p {margin:5em}
+   #mainLink {font-size:2em}
+</style> 
+</head>
 <body>
-you probably wanted to go there: 
+
+<p id="mainLink">
+Click here for 
   <a href="https://icesat2webview.s3.eu-central-1.amazonaws.com/index.html">Ice2SatWebView on S3</a>
   <br/>
-  alternate link in case https on S3 is disabled:
-  <a href="https://d3863ripe95iiz.cloudfront.net/index.html">Ice2SatWebView on Cloudfront</a>
-  
+
+</p>
+
+
+<!--p>
+(Alternate link:
+  <a href="https://d3863ripe95iiz.cloudfront.net/index.html">Ice2SatWebView on Cloudfront</a>)
+
+</p-->
 </body>
 <html>
