--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
  <style>
   body {text-align:center}
-  p {margin:5em}
+  p {margin-top:5em}
    #mainLink {font-size:2em}
 </style> 
 </head>
@@ -10,11 +10,16 @@
 
 <p id="mainLink">
 Click here for 
-  <a href="https://icesat2webview.s3.eu-central-1.amazonaws.com/index.html">Ice2SatWebView on S3</a>
-  <br/>
-
+  <a href="https://icesat2webview.s3.eu-central-1.amazonaws.com/index.html">IceSat2WebView</a> on S3
 </p>
-
+<p>
+<b>IceSat2 data source:</b>
+Neuenschwander, A. L., K. L. Pitts, B. P. Jelley, J. Robbins, B. Klotz,<br/>
+ S. C. Popescu, R. F. Nelson, D. Harding, D. Pederson, and R. Sheridan. 2020.<br/>
+ ATLAS/ICESat-2 L3A Land and Vegetation Height,Version 3. Boulder, Colorado USA.<br/>
+ NASA National Snow and Ice Data Center Distributed Active Archive Center.<br/>
+doi: https://doi.org/10.5067/ATLAS/ATL08.003. Date accessed: 2020-10-13
+</p>
 
 <!--p>
 (Alternate link:
